Archive2/6c/34be530f9b6a11/output
main.cpp:1:1: error: '_Myt' does not name a type
 _Myt &push_front(const value_type &_Value)
 ^
