Archive2/6c/34be530f9b6a11/main.cpp
_Myt &push_front(const value_type &_Value)
{
    if (size_+1 >= capacity_)
        reserve(capacity_ * 2);
    _Alloc().construct(content_+size_, _Value); // add the value in into the next position
    ++size_;
    std::rotate(content_,content_+size_-1, conent_+size_);
    return *this;
}